@@ -29,6 +29,7 @@ const NUVEI_ORDER_SUBSCR        = '_nuveiSubscr'; // replace the deprecated abov
 const NUVEI_CUID_POSTFIX        = '_sandbox_apm'; // postfix for Sandbox APM payments
 const NUVEI_TRANS_CURR          = '_transactionCurrency';
 const NUVEI_TRANS_STATUS        = '_transactionStatus';
+const NUVEI_PREV_TRANS_STATUS   = '_nuveiPrevTransactionStatus';
 
 const NUVEI_SOURCE_APPLICATION  = 'WOOCOMMERCE_PLUGIN';
 const NUVEI_GLOB_ATTR_NAME      = 'Nuvei Payment Plan'; // the name of the Nuvei Global Product Attribute name
