@@ -5,6 +5,8 @@
     * Added a script to remove the WCS Pay button on Thank-you page.
     * On Thank-you page hooks check if the order belongs to Nuvei.
     * Added PayPal as option for Rebillings.
+    * Added _nuveiPrevTransactionStatus custom field to the Order. It will be used in case of declined Void to return Order to original status.
+    * Void button will be available only for orders with AuthCode.
 
 # 1.3.1
     * Added the possibility to create empty Payment Plan. The merchant must leave the Payment Plan field empty.
